# caption-bot

./: .gitignore  Cargo.toml  sqlx-data.json
libs/: libatomic-1abecf58.so.1.2.0
src/: config.rs  db.rs  main.rs  voice_recv.rs  vosk.rs
