[package]
name = "caption-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
songbird = "0.2"
discortp = "0.4"
once_cell = "1.9"
bimap = "0.6"
serde_yaml = "0.8"

[dependencies.serenity]
version = "0.10"
default_features = false
# features = ["model", "unstable_discord_api"]
features = ["client", "cache", "gateway", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.17"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "sqlite", "offline"]